@startuml 

class Organizacao
{
    -nome
    -estado
    -Colaborador gestor
    --
    - validar(nome)
    'List<Colaborador> colaboradores;
    + setGestor(Colaborador)
}

class RepositorioOrganizacao<Entity>
{
    list<Organizacao> organizacoes;
--
    +List<Organizacao> all();
    +List<Organizacao> organizacoesFechadas()
    +void registar(Organizacao)
    +void registarGestor(Colaborador)
    -void add(Organizacao)
}


class Colaborador
{
    nome
    email
    telefone
    Organizacao organizacao
    Role funcao
}

enum Role 
{
    GESTOR 
    COLABORADOR 
}


class RepositorioColaborador<Entity>
{

    List<Colaborador> colaboradores;
    --
    List<Colaborador> all();
    List<Colaborador> colaboradorPorOrganizacao(Organizacao);
    void adicionarColaborador(Colaborador)
}

'class Repositorio<Entity>
'{
'    List<Entity> all();
'}

'RepositorioColaborador -up-|>Repositorio
'RepositorioOrganizacao -up-|>Repositorio


class FabricaRepositorios
{

    RepositorioOrganizacao repositorioOrganizacao()
    {
        'seria singleton se tiver lista
        return new RepositorioOrganizacao;

    };

    RepositorioColaborador repositorioColaborador();

}


Organizacao <-- Colaborador

@enduml